tests/invalid/import_inside_finally/main.py
def main() -> None:
    try:
        x: int = 1
    finally:
        import imports.module_a
